--- a/myShop/app/build.gradle
+++ b/myShop/app/build.gradle
@@ -20,15 +20,15 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.google.android.gms:play-services-wallet:9.4.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.google.android.gms:play-services-wallet:9.4.0'
 
 
-    compile 'com.intuit.sdp:sdp-android:1.0.3'
+    implementation 'com.intuit.sdp:sdp-android:1.0.3'
 
-    compile 'com.mcxiaoke.volley:library:1.0.19'
-    compile 'com.google.code.gson:gson:2.6.1'
+    implementation 'com.mcxiaoke.volley:library:1.0.19'
+    implementation 'com.google.code.gson:gson:2.6.1'
     compile('com.paypal.sdk:paypal-android-sdk:2.14.4')
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
