--- a/UBA/app/src/main/AndroidManifest.xml
+++ b/UBA/app/src/main/AndroidManifest.xml
@@ -28,10 +28,21 @@
             </intent-filter>
         </activity>
         <activity android:name=".ShoppingActivity" />
+        <activity android:name=".SRUNDS" />
         <activity android:name=".ProductActivity" />
         <activity android:name=".CheckoutActivity" />
         <activity android:name=".PaymentsActivity" />
         <activity android:name=".PayPalCheckoutActivity"></activity>
+
+        <activity android:name=".authentification.MainActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+        <activity android:name=".authentification.LoginActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+        <activity android:name=".authentification.SignupActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+
+        <activity android:name="ut.ee.cs.rsg.authentification.ResetActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
     </application>
 
 </manifest>
