--- a/UBA/app/build.gradle
+++ b/UBA/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:16.0.4'
     implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation 'com.google.firebase:firebase-database:16.0.4'
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -47,17 +48,17 @@ dependencies {
     implementation 'com.intuit.sdp:sdp-android:1.0.3'
     implementation 'com.mcxiaoke.volley:library:1.0.19'
     implementation 'com.google.code.gson:gson:2.6.1'
-    compile('com.paypal.sdk:paypal-android-sdk:2.14.4')
+    implementation('com.paypal.sdk:paypal-android-sdk:2.14.4')
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation "androidx.core:core-ktx:+"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
     implementation 'com.jakewharton:butterknife:10.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
-
 
 
 }
